# shishki_bot

./: .gitignore  AGENTS.md  PLAYBOOK.md  README.md  about_me.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  scheduler.py
app/bot/: __init__.py  keyboards.py  messages.py
app/db/: models.py  session.py
app/services/: booking.py  clients.py  finance.py  notifications.py  referrals.py  reminders.py
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  CODEX_PROMPT.md  COST_BUDGET.md  DECISION_LOG.md  DEPLOYMENT.md  DETERMINISTIC_CASE_STUDY.md  EVIDENCE_INDEX.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  PROJECT_BRIEF.md  README.md  adoption_modes.md  cache_context_layout.md  cost_budget_guardrails.md  cost_telemetry_protocol.md  external_skill_security_policy.md  project_fit_guide.md  spec.md  tasks.md
docs/archive/: CYCLE2_T05_REVIEW.md  CYCLE3_T06_REVIEW.md  CYCLE4_T07_REVIEW.md  CYCLE5_T09_REVIEW.md  CYCLE6_T10_REVIEW.md  (+3 more)
hooks/: enforce_codex_exec.sh  guard_files.sh  guard_phase_boundary.sh  log_bash.sh  save_checkpoint.sh
schemas/: cost_telemetry_entry.schema.json
tests/: test_admin_auth.py  test_admin_booking.py  test_booking_service.py  test_ci_supply_chain.py  test_client_handlers.py  test_client_history.py  test_config.py  test_deterministic_case_study.py  test_finance.py  test_imports.py  test_models.py  test_notifications.py  test_public_operating_boundary.py  test_referrals.py  test_reminders.py
tools/: cost_rollup.py  integrity_check.py  skill_security_gate.py
(+20 files in other folders)
